<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cargo.sbpd.ui.activities.DialogProgressSyncActivity"
    tools:showIn="@layout/activity_dialog_progress_sync">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/sbpd_folder_to_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sbpd_no_sync"
            android:textColor="#000" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/spbd_show_all_folders"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_folder_black_24dp"
            android:text="-"
            android:textColor="@android:color/primary_text_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sbpd_speed" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/ic_file_upload_black_24dp" />

        <TextView
            android:id="@+id/spbd_speed_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_speed" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/ic_file_download_black_24dp" />

        <TextView
            android:id="@+id/spbd_speed_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_speed" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>


    <TextView
        android:id="@+id/sbpd_title_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sbpd_current"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:id="@+id/sbpd_card_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:visibility="gone"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sbpd_item_action_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/bg_circle_icon"
                android:padding="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/sbpd_item_action_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="/storage/emulated/0/Sync/Test/JeSuisUnFichier.jpg" />

                <ProgressBar
                    android:id="@+id/spbd_item_progress"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sbpd_item_action_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="154/253ko" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/sbpd_item_action_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="60.8%" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sbpd_item_left_to_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sbpd_next"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sbpd_historique"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sbpd_historique" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/sbpd_item_list_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:visibility="gone" />

</LinearLayout>
